--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@angular/core": "~11.0.9",
     "@angular/forms": "~11.0.9",
     "@angular/http": "^7.2.16",
+    "@angular/localize": "~11.0.9",
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -31,6 +34,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "bootstrap": "^4.4.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
